# mcp-stats-oracle

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  SUBMISSION.md  pyproject.toml  r_bridge.py  server.py  setup.R
.claude-plugin/: marketplace.json  plugin.json
demo/: demo_video.md  run_demo.py  with_tools.md  without_tools.md
hooks/: README.md  hooks.json  plumber_manager.py  pre_tool_use.py  session_start.py  settings.json  stop.py
r_scripts/: catch22_tool.R  changepoint_tool.R  describe_tool.R  mfi_tool.R  mrcd_tool.R  nowcast_tool.R  plot_tool.R  plumber_server.R  tsrepr_tool.R
sample_data/: aapl_2020.csv  fetch_aapl_sample.R
skills/stats-oracle/: SKILL.md
tests/: test_r_scripts.R  test_tools.py
