[project]
name = "mcp-stats-oracle"
version = "0.2.1"
description = "MCP server exposing production R statistical tools (catch22, MRCD, changepoint, MFI, TSrepr, Bayesian nowcast) to Claude via a persistent R Plumber worker."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Travis Jakel", email = "travisjakel@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
stats-oracle = "server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
